--- a/rose-res/po/wesnoth-lib/zh_CN.po
+++ b/rose-res/po/wesnoth-lib/zh_CN.po
@@ -9,7 +9,7 @@ msgstr ""
 "Project-Id-Version: wesnoth\n"
 "Report-Msgid-Bugs-To: http://bugs.wesnoth.org/\n"
 "POT-Creation-Date: 2010-12-08 18:05+0100\n"
-"PO-Revision-Date: 2015-04-18 09:34+0800\n"
+"PO-Revision-Date: 2015-04-27 17:19+0800\n"
 "Last-Translator: \n"
 "Language-Team: Chinese/Simplified <i18n-translation@lists.linux.net.cn>\n"
 "Language: zh_CN\n"
@@ -5645,6 +5645,12 @@ msgstr "%Y年%m月%d日，%H时%M分"
 
 msgid "Transit"
 msgstr "中转"
+
+msgid "War of Kingdom"
+msgstr "王国战争"
+
+msgid "Rose"
+msgstr "Rose"
 
 #~ msgid "Join Official Server"
 #~ msgstr "加入官方服务器"
